--- a/hmk_03_JLO.qmd
+++ b/hmk_03_JLO.qmd
@@ -56,14 +56,15 @@ vek_ints <- c(1:10)
 v1 <- 1:3
 v2 <- c(1:4)
 v1 + v2
-#R is adding the values of the v1 and v2 together, but it's not clear to me why the 4th value of the output is "5" instead of "4".
+
+#R is adding the equally indexed values of v1 and v2 together, but it's not clear to me why the 4th output value is 5; I expected 4 or NA
 ```
 
 5.  Explain what the following code does. It may be helpful to reference the answer to the previous question:
 
 ```{r}
+# adding the constant 3 to each value in the vector.
 c(1, 5, 9) + 3
-# The above code is adding the constant 3 to each value in the vector.
 ```
 
 6.  Remove (delete) every variable in your workspace.
@@ -80,15 +81,14 @@ rm(list=ls())
 library(tidyverse)
 library(palmerpenguins)
 library(ggthemes)
-glimpse(penguins)
 ```
 
 2.  Recreate the visualization of `body_mass_g` to `flipper_length_mm`, from the penguins data set, that is shown in question 8 of section 2.2.5 of [R4DS](https://r4ds.hadley.nz/data-visualize).
 
-```{r}
-ggplot(
-  data = penguins, 
-       mapping = aes(x=flipper_length_mm, y=body_mass_g)
+```{r message=FALSE}
+
+na.omit(penguins) |>
+ggplot(aes(x=flipper_length_mm, y=body_mass_g)
   ) +
   geom_point(mapping = aes(color = species, shape = species)) +
   geom_smooth(method = "lm") +
@@ -103,6 +103,4 @@ ggplot(
 
 3.  Explain why each aesthetic is mapped at the level that it is (i.e., at the global level, in the `ggplot()` function call, or at the geom level, in the `geom_XXX()` function call). Note: A lot of different options will work, but some options are clearly better than others.
 
-```{r}
-#Mapping species globally has the undesirable effect of creating distinct linear models for each cluster of species data. Mapping species color and shape at the point level creates distinctly colored and shaped data points for each group of species data, which helps to make the graph easily interpretable.   
-```
+*Mapping species globally has the undesirable effect of creating distinct linear models for each cluster of species data. Mapping species color and shape at the point level creates distinctly colored and shaped data points for each group of species data, which helps to make the graph easily interpretable.*
