--- a/hmk_03_JLO.qmd
+++ b/hmk_03_JLO.qmd
@@ -6,8 +6,6 @@ editor: visual
 
 # Base R and R Basics
 
-HINT: Remember that you can get help on any function by typing `?`(function name). For instance, `?rnorm` gives help on the `rnorm()` function.
-
 ## Creating and naming variables
 
 1.  Create a variable called `x` and use it to store the result of the calculation `(3*(4+2)`.
@@ -26,9 +24,8 @@ x*pi
 
 ```{r}
 getwd()
-
-#This working directory seems appropriate; I reckon it was set by RStudio.
 ```
+*This working directory seems appropriate; I reckon it was set by RStudio.*
 
 ## Vectors
 
@@ -56,16 +53,16 @@ vek_ints <- c(1:10)
 v1 <- 1:3
 v2 <- c(1:4)
 v1 + v2
-
-#R is adding the equally indexed values of v1 and v2 together, but it's not clear to me why the 4th output value is 5; I expected 4 or NA
 ```
+
+*R is adding the equally indexed elements of v1 and v2 together, then recycling to the first element in v1 to add to the 4th element in v2*
 
 5.  Explain what the following code does. It may be helpful to reference the answer to the previous question:
 
 ```{r}
-# adding the constant 3 to each value in the vector.
 c(1, 5, 9) + 3
 ```
+*This code is adding the constant 3 to each element  in the vector.*
 
 6.  Remove (delete) every variable in your workspace.
 
